--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
+    "react-alert": "^7.0.0",
+    "react-alert-template-basic": "^1.0.0",
+    "react-confirm-alert": "^2.6.1",
+    "react-datepicker": "^2.14.1",
+    "react-day-picker": "^7.4.7",
+    "react-daypicker": "^3.0.10",
     "react-dom": "^16.13.1",
     "react-responsive-carousel": "^3.2.4",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "reactjs-popup": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
