--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-responsive-carousel": "^3.2.4",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "reactjs-popup": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
