--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     ]
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "gh-pages": "^2.2.0"
+    "gh-pages": "^2.2.0",
+    "mocha": "^7.1.2"
   }
 }
