--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "gh-pages": "^2.2.0",
-    "mocha": "^7.1.2"
+    "mocha": "^7.1.2",
+    "testcafe": "^1.8.4"
   }
 }
